# Fastdrop

./: Cargo.toml  README.md  USAGE.md  compression_benchmark.txt  test.txt
src/: advertise.rs  compression.rs  example.txt  main.rs  network.rs  protocol.rs  sender.rs  transfer.rs
